--- a/eda_tests/EDA notebook.ipynb
+++ b/eda_tests/EDA notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,13 +262,13 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bgg_data = pd.read_csv('bgg_GameItem.csv', index_col=0)\n",
+    "bgg_data = pd.read_csv('../scraping_cleaning_normalizing/bgg_GameItem.csv', index_col=0)\n",
     "bgg_data.head()"
    ]
   },
@@ -3157,7 +3157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
